--- a/css/lower.css
+++ b/css/lower.css
@@ -3,7 +3,7 @@
     align-items: center;
     background-color:#E8D8C4;
     margin-left: 20px;
-    width: 400px;
+    width: 460px;
     height: 200px;
     padding: 20px;
     margin-top: -69.68px;
@@ -13,6 +13,78 @@
 .menu-flexrow {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     
     
+}
+.menu-para {
+    font-size: medium;
+    font-weight: bold;
+    text-align: center;
+}
+
+.blue-image {
+    border-radius: 25px;
+    width: 60px;
+    margin-right: 30px;
+    margin-left: 40px;
+    margin-top: 30px;
+    
+}
+
+.bis-image {
+    width: 60px;
+    border-radius: 25px;
+    margin-right: 30px;
+    margin-left: 40px;
+    margin-top: 30px;
+    
+    
+}
+
+.choco-image {
+    width: 60px;
+    border-radius: 25px;
+    margin-top: 30px;
+    margin-left: 30px;
+    
+}
+.image-name {
+    font-size: small;
+    line-height: 0;
+}
+
+.para-ad {
+    font-size: xx-small;
+    margin-top: -5px;
+    
+}
+.bluecake-div {
+    background-color: #FDF0D1;
+    height: 130px;
+    width: 140px;
+    margin-right: 20px;
+    border-radius: 20px;
+    padding-left: 5px;
+    
+}
+
+.biscake-div {
+    background-color: #FDF0D1;
+    height: 130px;
+    width: 130px;
+    margin-right: 20px;
+    border-radius: 20px;
+    padding-left: 5px;
+}
+.chococake-div {
+    background-color: #FDF0D1;
+    height: 130px;
+    width: 130px; 
+    border-radius: 20px;
+    padding-left: 5px;
+}
+
+.last-container {
+    background-color: #61481C;
 }
